--- a/pad/app/src/main/res/drawable/round_background.xml
+++ b/pad/app/src/main/res/drawable/round_background.xml
@@ -3,7 +3,10 @@
   xmlns:android="http://schemas.android.com/apk/res/android" >
   <gradient  android:angle="90.0" />
   <corners
-  android:topLeftRadius="8dip"
-  android:bottomLeftRadius="8dip"/>
-  <solid android:color="@color/colorPrimary" />
+  android:topLeftRadius="10dip"
+  android:bottomLeftRadius="10dip"
+  android:topRightRadius="10dip"
+    android:bottomRightRadius="10dip"
+    />
+  <solid android:color="@color/greenLight" />
 </shape>
