--- a/pad/app/src/main/res/values/colors.xml
+++ b/pad/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-  <color name="colorPrimary">#3F51B5</color>
-  <color name="colorPrimaryDark">#303F9F</color>
+  <color name="colorPrimary">#f0e3d1</color>
+  <color name="colorPrimaryDark">#f1c5be</color>
   <color name="colorAccent">#FF4081</color>
   <color name="brown">#7d5951</color>
   <color name="white">#ffffff</color>
@@ -10,4 +10,26 @@
 
   <color name="green">#5b7626</color>
   <color name="greenLight">#e9f4d0</color>
+  <color name="whites">#ffffff</color>
+  <color name="gray">#AFAFAF</color>
+  <color name="yellow">#F99503</color>
+  <color name="gray_color">#ffe8ecef</color>
+  <color name="bg_sort_color">#EDEDED</color>
+
+  <color name="greenWhite">#3dd3fc</color>
+  <color name="segment">#dadade</color>
+  <color name="transparent">#00000000</color>
+
+  <color name="test">#3dd3fc</color>
+
+  <color name="my_background">#24d0fd</color>
+  <color name="whiteTransparent">#ffffffff</color>
+
+  <color name="grayBrown">#8f8a83</color>
+  <color name="brown2">#a4a09b</color>
+
+  <color name="gray2">#e6e5e1</color>
+  <color name="orange">#f9c562</color>
+  <color name="orangeDeeper">#f1bf5f</color>
+  <color name="bulePink">#77d5dc</color>
 </resources>
