--- a/pad/app/src/main/res/values/styles.xml
+++ b/pad/app/src/main/res/values/styles.xml
@@ -4,8 +4,13 @@
   <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
     <!-- Customize your theme here. -->
     <item name="colorPrimary">@color/colorPrimary</item>
-    <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+    <item name="colorPrimaryDark">@color/colorPrimary</item>
     <item name="colorAccent">@color/colorAccent</item>
+  </style>
+
+  <style name="Theme.ToolBar.Contact" parent="Theme.AppCompat.Light.NoActionBar">
+    <item name="android:actionMenuTextColor">#ffffff</item>
+    <item name="android:textSize">18sp</item>
   </style>
 
 </resources>
