添加了拨号的部分内容，还需修改病例的patientid，居家的活动

--- a/pad/app/src/main/res/layout/activity_call.xml
+++ b/pad/app/src/main/res/layout/activity_call.xml
@@ -16,6 +16,7 @@
     app:tabMode="fixed"
     app:tabIndicatorHeight="0dp"
     app:tabTextColor="#000000"
+    app:tabTextAppearance="@style/MyTabLayoutTextAppearance"
     android:background="@drawable/btn_nav_nor"
     app:tabSelectedTextColor="#ffffff">
   </android.support.design.widget.TabLayout>
