--- a/pad/app/src/main/res/layout/activity_jujia2.xml
+++ b/pad/app/src/main/res/layout/activity_jujia2.xml
@@ -4,7 +4,7 @@ xmlns:app="http://schemas.android.com/apk/res-auto"
 xmlns:tools="http://schemas.android.com/tools"
 android:layout_width="match_parent"
 android:layout_height="match_parent"
-tools:context="com.ainemo.pad.JujiaActivity"
+tools:context="com.ainemo.pad.Jujia.JujiaActivity"
   android:background="@drawable/background"
   >
 
@@ -27,86 +27,14 @@ tools:context="com.ainemo.pad.JujiaActivity"
     android:layout_height="88px"
     />
 
-  <RelativeLayout
-    android:id="@+id/temperature"
+  <android.support.v4.view.ViewPager
+
     android:layout_marginLeft="150px"
     android:layout_marginTop="155px"
     android:layout_width="409px"
     android:layout_height="539px"
-    android:background="@color/white">
-    <com.ainemo.pad.drawSmoothLine.BesselChart
-      android:id="@+id/shidu_line_chart"
-      android:layout_width="match_parent"
-      android:layout_height="300px"
-      app:verticalAxisPosition="right"
-      />
-    <TextView
-      android:layout_marginLeft="26px"
-      android:layout_marginTop="330px"
-      android:id="@+id/today"
-      android:textSize="30px"
-      android:text="今天"
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content" />
-    <TextView
-
-      android:id="@+id/date"
-      android:textSize="24px"
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content" />
-    <LinearLayout
-      android:layout_width="172px"
-      android:layout_height="114px"
-      android:background="@color/gray2"
-      android:layout_marginLeft="26px"
-      android:layout_marginBottom="58px"
-      android:layout_alignParentBottom="true"
-      android:orientation="vertical">
-        <TextView
-          android:layout_marginTop="30px"
-          android:layout_width="wrap_content"
-          android:layout_height="wrap_content"
-          android:text="最高温度"
-          android:textColor="@color/grayBrown"
-          android:textSize="18px"
-          android:layout_gravity="center_horizontal" />
-        <TextView
-          android:layout_width="wrap_content"
-          android:layout_height="wrap_content"
-          android:layout_gravity="center_horizontal"
-          android:text="28℃"
-          android:textColor="@color/grayBrown"
-          android:textSize="36px" />
-
-    </LinearLayout>
-    <LinearLayout
-      android:layout_alignParentEnd="true"
-      android:layout_marginRight="26px"
-      android:layout_marginBottom="58px"
-      android:layout_width="172px"
-      android:layout_height="114px"
-      android:layout_alignParentBottom="true"
-      android:background="@color/gray2"
-      android:orientation="vertical">
-
-        <TextView
-          android:layout_gravity="center_horizontal"
-          android:layout_marginTop="30px"
-          android:layout_width="wrap_content"
-          android:layout_height="wrap_content"
-          android:text="最低温度"
-          android:textColor="@color/grayBrown"
-          android:textSize="18px" />
-        <TextView
-          android:layout_gravity="center_horizontal"
-          android:layout_width="wrap_content"
-          android:layout_height="wrap_content"
-          android:text="11℃"
-          android:textColor="@color/grayBrown"
-          android:textSize="36px" />
-      </LinearLayout>
-
-  </RelativeLayout>
+    android:id="@+id/jiujia_view_pager"
+    android:scrollbars="none" />
 
 
 <!--<com.github.mikephil.charting.charts.BarChart-->
