--- a/pad/app/src/main/res/layout/fragment_call.xml
+++ b/pad/app/src/main/res/layout/fragment_call.xml
@@ -190,7 +190,7 @@
           android:text="#" />
       </LinearLayout>
       <LinearLayout
-        android:id="@+id/number_call"
+        android:id="@+id/call"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
