还剩cardview未更改 通讯录未设置头像 陈习武

--- a/pad/app/src/main/res/layout/activity_case_list.xml
+++ b/pad/app/src/main/res/layout/activity_case_list.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-  android:orientation="horizontal" android:layout_width="match_parent"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+  android:orientation="vertical" android:layout_width="match_parent"
   android:layout_height="match_parent"
   android:background="@drawable/background">
 
@@ -13,14 +13,24 @@
     android:layout_height="88px"
     android:clickable="true"
     />
+
+<LinearLayout
+  android:layout_width="match_parent"
+  android:layout_height="match_parent"
+
+  android:weightSum="1"
+  >
   <com.ainemo.pad.Case.vPage.CustomViewPager
-    android:layout_marginTop="128px"
     android:id="@+id/view_page"
     android:layout_width="match_parent"
-    android:layout_height="595px"
+    android:layout_height="0dp"
+    android:layout_weight="1"
     android:overScrollMode="never"
     android:layout_centerHorizontal="true"
     android:layout_alignParentBottom="true"
     android:background="@color/transparent"
+
     />
-</RelativeLayout>
+</LinearLayout>
+
+</LinearLayout>
