--- a/pad/app/src/main/res/values/styles.xml
+++ b/pad/app/src/main/res/values/styles.xml
@@ -18,5 +18,8 @@
     <item name="android:textSize">30px</item>
   </style>
 
+  <style name="MyCardView" parent="CardView">
+    <item name="android:paddingTop">0px</item>
+  </style>
 
 </resources>
