--- a/pad/app/src/main/res/layout/item_contact.xml
+++ b/pad/app/src/main/res/layout/item_contact.xml
@@ -37,14 +37,35 @@
         android:layout_marginTop="21px"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
-
-      <TextView
-        android:text="130-0000-0000"
-        android:id="@+id/telephone"
-        android:textColor="#bca699"
-        android:textSize="24px"
+      <LinearLayout
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_gravity="left"
+        android:gravity="center_vertical"
+        >
+        <TextView
+          android:id="@+id/number_xiaoyu"
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:layout_marginLeft="18px"
+          android:layout_below="@+id/title"
+          android:layout_toRightOf="@id/icon"
+          android:paddingRight="40px"
+          android:layout_alignParentBottom="true"
+          android:textColor="#bca699"
+          android:textSize="24px" />
+        <TextView
+          android:id="@+id/number_phone"
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:layout_below="@+id/title"
+          android:layout_toRightOf="@id/number_xiaoyu"
+          android:layout_alignParentBottom="true"
+          android:textColor="#bca699"
+          android:textSize="24px" />
+      </LinearLayout>
+
     </LinearLayout>
 
   </LinearLayout>
