--- a/pad/app/src/main/res/values/colors.xml
+++ b/pad/app/src/main/res/values/colors.xml
@@ -36,4 +36,5 @@
   
   <color name="red255">#ffed9479</color>
   <color name="red128">#7fed9479</color>
+  <color name="greenBright">#a0d07a</color>
 </resources>
