--- a/pad/app/src/main/res/layout/activity_main.xml
+++ b/pad/app/src/main/res/layout/activity_main.xml
@@ -14,7 +14,7 @@
     android:id="@+id/home_name"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:text="李大凯，欢迎回来！"
+    android:text="欢迎回来！"
     android:textSize="30px"
     android:layout_marginLeft="68px"
     android:layout_marginTop="72px"
@@ -25,7 +25,7 @@
     android:id="@+id/home_number"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:text="小鱼号： 245635"
+    android:text="小鱼号:"
     android:textSize="24px"
     android:layout_marginLeft="68px"
     android:layout_marginTop="72px"
