保留温度数据为0-23的界面 陈习武

--- a/pad/app/src/main/res/layout/activity_jujia2.xml
+++ b/pad/app/src/main/res/layout/activity_jujia2.xml
@@ -182,7 +182,7 @@ tools:context="com.ainemo.pad.Jujia.JujiaActivity"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="20px"
         android:layout_below="@+id/room_status_image_text"
-        android:text="关闭"
+        android:text="--"
         android:textColor="@color/brown2"
         android:textSize="30px" />
     </LinearLayout>
