--- a/pad/app/src/main/res/layout/activity_main.xml
+++ b/pad/app/src/main/res/layout/activity_main.xml
@@ -10,6 +10,15 @@
   android:background="@drawable/background"
   >
 
+  <!--<TextView-->
+    <!--android:layout_width="wrap_content"-->
+    <!--android:layout_height="wrap_content"-->
+    <!--android:text="33联动医疗"-->
+    <!--android:textSize="80px"-->
+    <!---->
+    <!--android:layout_centerHorizontal="true"-->
+    <!--android:layout_marginTop="72px"-->
+    <!--/>-->
   <TextView
     android:id="@+id/home_name"
     android:layout_width="wrap_content"
@@ -18,7 +27,6 @@
     android:textSize="30px"
     android:layout_marginLeft="68px"
     android:layout_marginTop="72px"
-
     />
   <TextView
     android:paddingTop="46px"
