--- a/pad/app/src/main/res/values/attr.xml
+++ b/pad/app/src/main/res/values/attr.xml
@@ -15,4 +15,8 @@
         </attr>
     </declare-styleable>
 
+    <declare-styleable name="FlowLayout">
+        <attr name="width_space" format="dimension"/>
+        <attr name="height_space" format="dimension"/>
+    </declare-styleable>
 </resources>
