--- a/pad/app/src/main/res/layout/activity_jujia2.xml
+++ b/pad/app/src/main/res/layout/activity_jujia2.xml
@@ -253,6 +253,7 @@ tools:context="com.ainemo.pad.Jujia.JujiaActivity"
       android:layout_marginBottom="10px"
         android:src="@drawable/icon_mofang" />
     <LinearLayout
+      android:id="@+id/baojing"
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:background="@color/white"
