--- a/pad/app/src/main/res/layout/activity_jujia.xml
+++ b/pad/app/src/main/res/layout/activity_jujia.xml
@@ -265,7 +265,7 @@ tools:context="com.ainemo.pad.Jujia.JujiaActivity"
         android:layout_below="@+id/magic_image"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="20px"
-        android:text="魔方感应"
+        android:text="一键报警"
         android:textSize="18px"
         android:textColor="@color/brown2" />
 
