--- a/pad/app/src/main/res/layout/baojing_adpter.xml
+++ b/pad/app/src/main/res/layout/baojing_adpter.xml
@@ -1,27 +1,42 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="vertical">
-
+    android:layout_height="88px"
+    android:gravity="center_vertical"
+  >
     <TextView
-        android:layout_width="match_parent"
+      android:layout_centerVertical="true"
+      android:layout_marginLeft="56px"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="17dp"
-        android:layout_marginTop="10px"
-        android:textColor="@color/black"
-        android:paddingLeft="30px"
+        android:textSize="25sp"
+        android:textColor="#8c7569"
         android:id="@+id/baojing_she_bei_number"/>
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textSize="14dp"
-        android:paddingTop="10px"
-        android:paddingLeft="30px"
-        android:textColor="@color/gray"
-        android:id="@+id/baojing_time"/>
+    <LinearLayout
+      android:layout_alignParentRight="true"
+      android:layout_marginRight="32px"
+      android:layout_centerVertical="true"
+      android:gravity="right"
+      android:orientation="vertical"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content">
+        <TextView
+          android:id="@+id/baojing_yyyyMMdd"
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:textColor="@color/gray"
+          android:textSize="20sp"
+          />
+        <TextView
+          android:id="@+id/baojing_hhmmss"
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:textColor="@color/gray"
+          android:textSize="17sp" />
+    </LinearLayout>
     <View
+      android:layout_alignParentBottom="true"
         android:layout_width="match_parent"
         android:layout_height="2px"
         android:background="@color/gray"/>
-</LinearLayout>
+</RelativeLayout>
