--- a/pad/app/src/main/res/layout/activity_case_list.xml
+++ b/pad/app/src/main/res/layout/activity_case_list.xml
@@ -1,9 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
   android:orientation="vertical" android:layout_width="match_parent"
   android:layout_height="match_parent"
-  android:background="@drawable/background">
+  android:background="@drawable/background"
+    >
+  <include
+      android:visibility="visible"
 
+      android:id="@+id/search_layout"
+      layout="@layout/widget_search_bar"
+      android:layout_width="500px"
+      android:layout_height="200px"
+      />
   <Button
     android:layout_marginLeft="1152px"
     android:layout_marginTop="30px"
@@ -15,9 +23,9 @@
     />
 
 <LinearLayout
+    android:layout_below="@id/return_btn"
   android:layout_width="match_parent"
   android:layout_height="match_parent"
-
   android:weightSum="1"
   >
   <com.ainemo.pad.Case.vPage.CustomViewPager
@@ -29,8 +37,7 @@
     android:layout_centerHorizontal="true"
     android:layout_alignParentBottom="true"
     android:background="@color/transparent"
-
     />
 </LinearLayout>
 
-</LinearLayout>
+</RelativeLayout>
