--- a/pad/app/src/main/res/layout/item_case.xml
+++ b/pad/app/src/main/res/layout/item_case.xml
@@ -96,8 +96,27 @@
       android:text=""
       android:textColor="@color/brownLight"
       android:textSize="30px" />
-
-
+    <ImageView
+        android:id="@+id/call_image"
+        android:layout_width="34px"
+        android:layout_height="34px"
+        android:layout_marginTop="350px"
+        android:layout_marginLeft="198px"
+        android:src="@drawable/call"
+        android:visibility="gone"
+       />
+    <TextView
+        android:id="@+id/call_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="350px"
+        android:layout_marginLeft="198px"
+        android:paddingLeft="50px"
+        android:text="呼叫"
+        android:textColor="@color/brownLight"
+        android:textSize="30px"
+        android:visibility="gone"
+       />
     <ImageView
       android:layout_width="34px"
       android:layout_height="34px"
