--- a/pad/app/src/main/res/values/colors.xml
+++ b/pad/app/src/main/res/values/colors.xml
@@ -38,4 +38,6 @@
   <color name="red128">#7fed9479</color>
   <color name="greenBright">#a0d07a</color>
   <color name="black">#000000</color>
+  <color name="theme_primary_text_inverted">#000000</color>
+  <color name="theme_secondary_text_inverted">#000000</color>
 </resources>
