--- a/pad/app/src/main/res/layout/activity_case_detail.xml
+++ b/pad/app/src/main/res/layout/activity_case_detail.xml
@@ -4,14 +4,152 @@
   android:orientation="vertical" android:layout_width="match_parent"
   android:layout_height="match_parent"
   android:background="@drawable/background">
-  <include
-    layout="@layout/item_case"
-    android:layout_width="365px"
-    android:layout_height="595px"
 
-    android:layout_alignTop="@+id/relativeLayout"
-    android:layout_alignParentStart="true"
-    android:layout_marginStart="100px" />
+  <RelativeLayout
+      android:layout_width="365px"
+      android:layout_height="595px"
+      android:layout_marginTop="75px"
+      android:layout_marginLeft="100px"
+      android:padding="0dp"
+      android:background="@drawable/bg">
+    <TextView
+        android:id="@+id/textString_case"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="21px"
+        android:layout_marginLeft="22px"
+        android:layout_alignParentLeft="false"
+        android:text="病例信息"
+        android:textColor="@color/white"
+        android:textSize="30px" />
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="60px"
+        android:layout_marginLeft="22px"
+        android:text="PERSONAL INFORMATION"
+        android:textColor="@color/whiteGray"
+        android:textSize="18px" />
+    <de.hdodenhof.circleimageview.CircleImageView
+        android:id="@+id/head"
+        android:layout_width="164px"
+        android:layout_height="164px"
+        android:layout_marginTop="113px"
+        android:layout_marginLeft="93px"
+        android:src="@color/colorPrimary" />
+
+    <ImageView
+        android:layout_width="34px"
+        android:layout_height="34px"
+        android:layout_marginTop="306px"
+        android:layout_marginLeft="22px"
+        android:src="@drawable/person" />
+    <TextView
+        android:id="@+id/patient_name"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+
+        android:layout_marginTop="306px"
+        android:layout_marginLeft="22px"
+        android:paddingLeft="50px"
+        android:text=""
+        android:textColor="@color/brownLight"
+        android:textSize="30px" />
+    <!--</LinearLayout>-->
+
+    <ImageView
+        android:layout_width="34px"
+        android:layout_height="34px"
+        android:layout_marginTop="306px"
+        android:layout_marginLeft="198px"
+        android:src="@drawable/gender" />
+    <TextView
+        android:id="@+id/patient_gender"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="306px"
+        android:layout_marginLeft="198px"
+        android:paddingLeft="50px"
+        android:text=""
+        android:textColor="@color/brownLight"
+        android:textSize="30px" />
+
+    <ImageView
+        android:layout_width="34px"
+        android:layout_height="34px"
+        android:layout_marginTop="350px"
+        android:layout_marginLeft="22px"
+        android:src="@drawable/age" />
+    <TextView
+        android:id="@+id/patient_age"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="350px"
+        android:layout_marginLeft="22px"
+        android:paddingLeft="50px"
+        android:text=""
+        android:textColor="@color/brownLight"
+        android:textSize="30px" />
+    <ImageView
+        android:id="@+id/call_image"
+        android:layout_width="34px"
+        android:layout_height="34px"
+        android:layout_marginTop="350px"
+        android:layout_marginLeft="198px"
+        android:src="@drawable/call"
+        android:visibility="gone"
+        />
+    <TextView
+        android:id="@+id/call_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="350px"
+        android:layout_marginLeft="198px"
+        android:paddingLeft="50px"
+        android:text="呼叫"
+        android:textColor="@color/brownLight"
+        android:textSize="30px"
+        android:visibility="gone"
+        />
+    <ImageView
+        android:layout_width="34px"
+        android:layout_height="34px"
+        android:layout_marginTop="394px"
+        android:layout_marginLeft="22px"
+        android:src="@drawable/doctor" />
+    <TextView
+        android:id="@+id/doctor_name"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="394px"
+        android:layout_marginLeft="22px"
+        android:paddingLeft="50px"
+        android:text=""
+        android:textColor="@color/brownLight"
+        android:textSize="30px" />
+
+    <LinearLayout
+        android:layout_width="294px"
+        android:layout_height="108px"
+        android:layout_marginTop="436px"
+        android:layout_marginLeft="22px"
+        android:background="@drawable/round_background"
+        android:orientation="vertical">
+      <TextView
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:layout_marginTop="10px"
+          android:layout_marginLeft="22px"
+          android:text="病情概述："
+          android:textSize="18px" />
+      <TextView
+          android:id="@+id/illness_description"
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:layout_marginLeft="22px"
+          android:textSize="18px" />
+    </LinearLayout>
+  </RelativeLayout>
   <Button
     android:layout_marginLeft="1152px"
     android:layout_marginTop="30px"
