--- a/pad/app/src/main/res/layout/activity_case_list.xml
+++ b/pad/app/src/main/res/layout/activity_case_list.xml
@@ -4,15 +4,7 @@
   android:layout_height="match_parent"
   android:background="@drawable/background"
     >
-  <include
-      android:visibility="visible"
-      android:id="@+id/search_layout"
-      layout="@layout/search_view"
-      android:layout_marginLeft="30px"
-      android:layout_marginTop="20px"
-      android:layout_width="150dp"
-      android:layout_height="50dp"
-      />
+
   <Button
     android:layout_marginLeft="1152px"
     android:layout_marginTop="30px"
@@ -24,7 +16,7 @@
     />
 
 <LinearLayout
-    android:layout_below="@id/search_layout"
+    android:layout_below="@id/return_btn"
   android:layout_width="match_parent"
   android:layout_height="match_parent"
   android:weightSum="1"
