--- a/pad/app/src/main/res/layout/activity_doctor.xml
+++ b/pad/app/src/main/res/layout/activity_doctor.xml
@@ -93,7 +93,7 @@
       android:layout_marginTop="350px"
       android:layout_marginLeft="198px"
       android:paddingLeft="50px"
-      android:text=""
+      android:text="呼叫"
       android:textColor="@color/brownLight"
       android:textSize="30px"
         android:visibility="gone"/>
