--- a/pad/app/src/main/res/values/styles.xml
+++ b/pad/app/src/main/res/values/styles.xml
@@ -26,7 +26,8 @@
 
   <style name="MyCardView" parent="CardView">
     <item name="android:paddingTop">0px</item>
+    <item name="android:padding">0px</item>
+    <item name="cardUseCompatPadding">true</item>
   </style>
-
 
 </resources>
