--- a/pad/app/src/main/res/values/dimens.xml
+++ b/pad/app/src/main/res/values/dimens.xml
@@ -25,10 +25,10 @@
     <dimen name="search_box_elevation">3dp</dimen>
 
     <!-- Size of the icon (voice search, back arrow) in the search box. -->
-    <dimen name="search_box_icon_size">24dp</dimen>
+    <dimen name="search_box_icon_size">50px</dimen>
     <!-- Size of the close icon.
          Because it expands diagonally, it needs to be shrunk to look relatively the same size -->
-    <dimen name="search_box_close_icon_size">24dp</dimen>
+    <dimen name="search_box_close_icon_size">50px</dimen>
     <!-- Padding around back arrow icon in the search box -->
     <dimen name="search_box_navigation_icon_margin">14dp</dimen>
     <!-- Padding around close icon in the search box -->
@@ -36,10 +36,10 @@
     <!-- Left margin of the text field in the search box. -->
     <dimen name="search_box_text_left_margin">8dp</dimen>
     <!-- Search box text size -->
-    <dimen name="search_text_size">20sp</dimen>
+    <dimen name="search_text_size">15sp</dimen>
 
     <!-- Approx Size of the layout. This is not used anywhere in layouts
             but can be used to give margin on the main activity. -->
-    <dimen name="search_view_layout_approx_height">120dp</dimen>
+    <dimen name="search_view_layout_approx_height">120px</dimen>
 
 </resources>
